--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ myprojectenv/Lib/site-packages/pip/__init__.py
 output_batches
 pp
 processed_data
+combined_output.csv
+combined_output_test.csv
+test.csv
